--- a/index.html
+++ b/index.html
@@ -2583,8 +2583,7 @@
             html5QrCode.start({ facingMode: "environment" }, config, onScanSuccess)
                 .catch(err => {
                     console.error("Error starting QR scanner", err);
-                    // Fallback to user facing camera if environment fails? or just alert
-                    alert("후면 카메라를 실행할 수 없습니다. 권한을 확인해주세요.");
+                    alert("카메라를 실행할 수 없습니다. 권한을 확인해주세요.\n" + err);
                 });
         }
 
@@ -2592,36 +2591,40 @@
             const modal = document.getElementById('qrModal');
             modal.style.display = 'none';
 
-            if (html5QrCode && html5QrCode.isScanning) {
-                html5QrCode.stop().then(() => {
+            if (html5QrCode) {
+                if (html5QrCode.isScanning) {
+                    html5QrCode.stop().then(() => {
+                        html5QrCode.clear();
+                        html5QrCode = null;
+                    }).catch(err => console.log("Failed to stop qr code scanner", err));
+                } else {
                     html5QrCode.clear();
-                }).catch(err => console.log("Failed to stop qr code scanner", err));
+                    html5QrCode = null;
+                }
             }
         }
 
         function restartQRScanner() {
-            document.getElementById('qrResult').style.display = 'none';
-            document.getElementById('qr-reader').style.display = 'block';
-
-            // If stopped, start again
-            // html5QrCode object exists but might be stopped
-            const config = { fps: 10, qrbox: { width: 250, height: 250 } };
-            html5QrCode.start({ facingMode: "environment" }, config, onScanSuccess)
-                .catch(err => console.error(err));
+            // Simply call showQRScanner to reuse the initialization logic
+            // But we need to ensure previous instance is cleaned up if it exists in weird state?
+            // Usually onScanSuccess cleans it up.
+            showQRScanner();
         }
 
         function onScanSuccess(decodedText, decodedResult) {
             console.log(`Scan result: ${decodedText}`);
             if (decodedText.includes('dhlottery.co.kr') && decodedText.includes('v=')) {
                 // Stop scanning
-                html5QrCode.stop().then(() => {
-                    html5QrCode.clear();
-                    document.getElementById('qr-reader').style.display = 'none';
-                    verifyLotteryQR(decodedText);
-                }).catch(err => console.error(err));
+                if (html5QrCode) {
+                    html5QrCode.stop().then(() => {
+                        html5QrCode.clear();
+                        html5QrCode = null; // Destroy instance to force fresh start next time
+                        document.getElementById('qr-reader').style.display = 'none';
+                        verifyLotteryQR(decodedText);
+                    }).catch(err => console.error(err));
+                }
             } else {
-                // Continuous scanning until valid code, or maybe show toast?
-                // showToast("로또 QR 코드가 아닙니다.", "info");
+                // Continuous scanning...
             }
         }
 
