Vertically align plus sign in recent rounds

--- a/index.html
+++ b/index.html
@@ -1875,6 +1875,7 @@
                 // Balls Container
                 const ballsDiv = document.createElement('div');
                 ballsDiv.style.display = 'flex';
+                ballsDiv.style.alignItems = 'center'; // Vertically center items
                 ballsDiv.style.gap = '2px';
 
                 // Get Winning Numbers
