Add explicit close button to modal

--- a/index.html
+++ b/index.html
@@ -1596,6 +1596,11 @@
                 onclick="goToShop()">
                 🚗 지금 당장 사러 가기 (길찾기)
             </button>
+            <button class="btn-sm"
+                style="margin-top:15px; background:rgba(255,255,255,0.2); border:1px solid rgba(255,255,255,0.4); padding:8px 20px; border-radius:20px;"
+                onclick="closeModal()">
+                닫기
+            </button>
         </div> <!-- end info-modal -->
     </div> <!-- end ad-content -->
     <!-- Frequency Statistics Modal -->
