Move toast close button to top-right

--- a/index.html
+++ b/index.html
@@ -600,9 +600,8 @@
 
         .toast-close {
             position: absolute;
-            top: 50%;
-            right: 15px;
-            transform: translateY(-50%);
+            top: 10px;
+            right: 10px;
             cursor: pointer;
             font-size: 20px;
             color: #999;
